--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -37,3 +37,17 @@
     letter-spacing: 0.0015em;
     color: #0E161A;
 }
+
+.btn-clear-cart{
+    display: flex;
+    justify-content: space-between;
+    padding: 15px;
+    width: 100%;
+    background-color: #FF3030;
+    color: white;
+    font-size: 17px;
+    border: 0;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-bottom: 10px;
+}
